--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav {
 }
 
 .portfolio span {
-    color: #f9004d;
+    color: #a7cc15;
 }
 
 li {
@@ -43,7 +43,7 @@ li {
 }
 
 li:hover {
-    color: #f9004d;
+    color: #a7cc15;
     transition: 0.5s;
 }
 
@@ -64,7 +64,7 @@ h1 {
 }
 
 h1 span {
-    color: #f9004d;
+    color: #a7cc15;
 }
 
 .meu-nome h3 {
@@ -82,7 +82,7 @@ section {
 section img {
     height: 400px;
     border-radius: 100%;
-    border: 2px solid #f9004d;
+    border: 2px solid #a7cc15;
     margin-right: 30px;
 }
 
@@ -100,7 +100,7 @@ section div p {
 
 section div button {
     color: white;
-    background: #f9004d;
+    background: #a7cc15;
     height: 50px;
     width: 180px;
     font-size: 18px;
@@ -111,7 +111,7 @@ section div button {
 
 section div button:hover {
     background-color: black;
-    border: 3px solid #f9004d;
+    border: 3px solid #a7cc15;
     transition: 0.5s;
 }
 
@@ -152,7 +152,7 @@ section div button:hover {
 }
 
 .card a {
-    background-color: #f9004d;
+    background-color: #a7cc15;
     color: white;
     padding: 10px 20px;
     border-radius: 25px;
@@ -163,7 +163,7 @@ section div button:hover {
 
 .card a:hover {
     background-color: transparent;
-    border: 2px solid #f9004d;
+    border: 2px solid #a7cc15;
 }
 
 .card-projetos {
@@ -205,7 +205,7 @@ footer p {
 }
 
 .social a {
-    background-color: #f9004d;
+    background-color: #a7cc15;
     border-radius: 50%;
     display: flex;
     align-items: center;
