--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,19 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Josefin Sans', sans-serif;
+    
+    
 }
 
 .caixa-principal {
     height: 100vh;
     width: 100%;
-    background-image: url(./img/background.png);
+    background-image: url(./img/deixar-pc-bonito.jpg);
     background-size: cover;
     background-position: center;
-    background-color: #191919;
+    background-color:#191919;
+    
+    
 }
 
 nav {
@@ -24,9 +28,10 @@ nav {
 }
 
 .portfolio {
-    color: #ffffff;
+    color: #ffff;
     font-size: 40px;
     font-weight: 500;
+    display: flex;
 }
 
 .portfolio span {
@@ -42,6 +47,11 @@ li {
     cursor: pointer;
 }
 
+a {
+    display: flex;
+}
+
+
 li:hover {
     color: #a7cc15;
     transition: 0.5s;
@@ -49,13 +59,15 @@ li:hover {
 
 .link-menu {
     text-decoration: none;
-    color: white;
+    color: #fc4b2a;
+    
 }
 
 .meu-nome {
     position: absolute;
     top: 50%;
     left: 7%;
+    
 }
 
 h1 {
@@ -70,13 +82,19 @@ h1 span {
 .meu-nome h3 {
     color: white;
     font-size: 25px;
+    display: flex;
+}
+
+h3 span {
+    color: #a7cc15;
+    
 }
 
 section {
     display: flex;
     align-items: center;
     padding: 60px 15%;
-    background-color: #000000;
+    background-image: url(./img/fundo3.jpg);
 }
 
 section img {
@@ -89,14 +107,27 @@ section img {
 section div h2 {
     color: white;
     font-size: 75px;
+    
 }
 
 section div p {
-    color: #e2b9c6;
+    color:white;
     font-size: 24px;
     margin-top: 15px;
-    margin-bottom: 60px;
+    background:white;
+    cursor: pointer;
+    border-radius: 12px;
 }
+
+section div p:hover{
+    background-color: black;
+    border: 3px solid #a7cc15;
+    transition: 0.5s;
+}   
+
+
+
+ 
 
 section div button {
     color: white;
@@ -107,6 +138,8 @@ section div button {
     border: none;
     border-radius: 26px;
     cursor: pointer;
+    margin-top: 3px;
+    
 }
 
 section div button:hover {
