--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 .caixa-principal {
     height: 100vh;
     width: 100%;
-    background-image: url(./img/deixar-pc-bonito.jpg);
+    background-image: url(./img/background.png);
     background-size: cover;
     background-position: center;
     background-color:#191919;
@@ -94,43 +94,62 @@ section {
     display: flex;
     align-items: center;
     padding: 60px 15%;
-    background-image: url(./img/fundo3.jpg);
+    background-image: url(./img/background.png);
+    background-size: cover;
+    background-position: center;
+    background-color:#191919;
+    
+    
+    
 }
 
 section img {
     height: 400px;
     border-radius: 100%;
-    border: 2px solid #a7cc15;
-    margin-right: 30px;
+    border: 2px solid red;
+    margin-right: 0;
+    margin-left: -250px;
+    cursor: pointer;
 }
 
 section div h2 {
-    color: white;
     font-size: 75px;
+    margin-left: -370px;
+    cursor: pointer;
     
 }
 
-section div p {
+
+
+
+section div p  {
     color:white;
     font-size: 24px;
-    margin-top: 15px;
-    background:white;
+    margin-top: 30px;
+    margin-left:-400px; 
+    background-color: rgba(255, 0, 0, 0.5);
     cursor: pointer;
     border-radius: 12px;
-}
+    margin-right: 600px;
+    border:3pxsolid #fc4b2a;
 
-section div p:hover{
+    
+}
+  
+
+section div p:hover {
     background-color: black;
-    border: 3px solid #a7cc15;
-    transition: 0.5s;
-}   
+    border: 3px solid orangered;
+    transition: 0.1s;
+}
+ 
 
 
 
  
 
 section div button {
-    color: white;
+    color: blue;
     background: #a7cc15;
     height: 50px;
     width: 180px;
@@ -195,7 +214,7 @@ section div button:hover {
 }
 
 .card a:hover {
-    background-color: transparent;
+    background-color: red;
     border: 2px solid #a7cc15;
 }
 
