atualizando imag dos cards

--- a/styles.css
+++ b/styles.css
@@ -174,9 +174,10 @@ section div button:hover {
 }
 
 .projetos h2 {
-    color: white;
+    color:#000000 ;
     font-size: 75px;
     text-align: center;
+    background-color: #191919;
 }
 
 .card {
@@ -188,12 +189,10 @@ section div button:hover {
     text-align: center;
 }
 
-.card img {
-    height: 100px;
-}
+
 
 .card h5 {
-    color: white;
+    color: BLACK;
     font-size: 24px;
 }
 
@@ -205,7 +204,7 @@ section div button:hover {
 
 .card a {
     background-color: #a7cc15;
-    color: white;
+    color: black;
     padding: 10px 20px;
     border-radius: 25px;
     cursor: pointer;
