--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ section div button:hover {
 }
 
 .projetos h2 {
-    color:#000000 ;
+    color:orangered;
     font-size: 75px;
     text-align: center;
     background-color: #191919;
