--- a/styles.css
+++ b/styles.css
@@ -1,272 +1,283 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
-    
-    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "georgia", sans-serif;
 }
 
-.caixa-principal {
-    height: 100vh;
-    width: 100%;
-    background-image: url(./img/background.png);
-    background-size: cover;
-    background-position: center;
-    background-color:#191919;
-    
-    
+.navbar {
+  top:0px;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-color:#191919; 
+  position: fixed;
+  z-index:1030;
+  padding-top: 56px;
+}
+.custom-toggler.red-toggler {
+  border-color: rgba(255, 0, 0, 0.5);
 }
 
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 25px;
+.custom-toggler.red-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255,0,0,1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+ .caixa-principal {
+  padding: 13%;
+  background-image:url(./img/template.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-size: cover;
+  background-position:center;
+  background-repeat: no-repeat;
+  cursor:pointer;
+  /* height: 50vh;
+  min-height: 300px;  */
+  /* image-rendering: -webkit-optimize-contrast; */
+  /* image-rendering: crisp-edges; */
+  /* image-rendering: pixelated; */
+  /* width: 100%; */
+}
+.caixa img {
+  height: 100vh;
+  min-height: 300px;
+}
+.nav-link{
+  color:inherit !important;
 }
 
-.portfolio {
-    color: #ffff;
-    font-size: 40px;
-    font-weight: 500;
-    display: flex;
+a.navbar-brand {
+  color: #fff;
+  font-size:3em;
+  /* font-weight:500; */
+  display: flex;
+  text-transform:uppercase;
 }
 
 .portfolio span {
-    color: #a7cc15;
+  color: #a7cc15;
 }
 
 li {
-    color: white;
-    list-style: none;
-    display: inline-block;
-    font-size: 25px;
-    margin-right: 30px;
-    cursor: pointer;
+  color: white;
+  list-style: none;
+  display: inline-block;
+  font-size: 25px;
+  margin-right: 30px;
+  cursor: pointer;
 }
 
 a {
-    display: flex;
+  display: flex;
 }
 
-
 li:hover {
-    color: #a7cc15;
-    transition: 0.5s;
+  color: #a7cc15;
+  transition: 0.2s;
 }
 
 .link-menu {
-    text-decoration: none;
-    color: #fc4b2a;
-    
+  text-decoration: none;
+  color: #fff;
 }
 
 .meu-nome {
-    position: absolute;
-    top: 50%;
-    left: 7%;
-    
+  position: absolute;
+  top: 50%;
+  left: 7%;
 }
 
-h1 {
-    color: white;
-    font-size: 75px;
+.texto-centro {
+  color:#fff;
+  font-size:2rem;
+  text-transform: uppercase;
+}
+
+.texto-centro2 {
+  color:#fff;
+  font-size:2rem;
+  text-transform: uppercase;
 }
 
 h1 span {
-    color: #a7cc15;
+  color: #a7cc15;
+  text-transform: uppercase;
+  font-size:2rem;
 }
 
-.meu-nome h3 {
-    color: white;
-    font-size: 25px;
-    display: flex;
-}
+/* .meu-nome h3 {
+  color: white;
+  font-size: 25px;
+  display: flex;
+} */
 
 h3 span {
-    color: #a7cc15;
-    
+  color: #a7cc15;
+  text-transform: uppercase;
+  font-size:2rem;
 }
 
-section {
-    display: flex;
-    align-items: center;
-    padding: 60px 15%;
-    background-image: url(./img/background.png);
-    background-size: cover;
-    background-position: center;
-    background-color:#191919;
-    
-    
-    
-}
+/* section {
+  display: flex;
+  align-items: center;
+  padding:15% auto;
+  background-size: cover;
+  background-position: center;
+  background-color: #191919;
+  /* background-image: url(./img/background.png); */
+/* } */
 
 section img {
-    height: 400px;
-    border-radius: 100%;
-    border: 2px solid red;
-    margin-right: 0;
-    margin-left: -250px;
-    cursor: pointer;
+  padding-top:-15%;
+  border-radius: 100%;
+  border: 2px solid red;
+  margin-left: -86%;
+  cursor: pointer;
+  /* margin-right: 0; */
+  /* height: 400px; */
 }
 
 section div h2 {
-    font-size: 75px;
-    margin-left: -370px;
-    cursor: pointer;
-    
+  font-size: 75px;
+  margin-left: -370px;
+  cursor: pointer;
 }
 
-
-
-
-section div p  {
-    color:white;
-    font-size: 24px;
-    margin-top: 30px;
-    margin-left:-400px; 
-    background-color: rgba(255, 0, 0, 0.5);
-    cursor: pointer;
-    border-radius: 12px;
-    margin-right: 600px;
-    border:3pxsolid #fc4b2a;
-
-    
+section div p {
+  color: white;
+  font-size: 24px;
+  margin-top: 30px;
+  margin-left: -400px;
+  background-color: rgba(255, 0, 0, 0.5);
+  cursor: pointer;
+  border-radius: 12px;
+  margin-right: 600px;
+  border: 3pxsolid #fc4b2a;
 }
-  
 
 section div p:hover {
-    background-color: black;
-    border: 3px solid orangered;
-    transition: 0.1s;
+  background-color: black;
+  border: 3px solid orangered;
+  transition: 0.1s;
 }
- 
-
-
-
- 
 
 section div button {
-    color: blue;
-    background: #a7cc15;
-    height: 50px;
-    width: 180px;
-    font-size: 18px;
-    border: none;
-    border-radius: 26px;
-    cursor: pointer;
-    margin-top: 3px;
-    
+  color: blue;
+  background: #a7cc15;
+  height: 50px;
+  width: 180px;
+  font-size: 18px;
+  border: none;
+  border-radius: 26px;
+  cursor: pointer;
+  margin-top: 3px;
 }
 
 section div button:hover {
-    background-color: black;
-    border: 3px solid #a7cc15;
-    transition: 0.5s;
+  background-color: black;
+  border: 3px solid #a7cc15;
+  transition: 0.5s;
 }
 
 .projetos {
-    background-color: #191919;
-    padding-top: 50px;
-    padding-bottom: 100px;
+  background-color: #191919;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 .projetos h2 {
-    color:orangered;
-    font-size: 75px;
-    text-align: center;
-    background-color: #191919;
+  color: orangered;
+  font-size: 75px;
+  text-align: center;
+  background-color: #191919;
 }
 
 .card {
-    background-color: #000000;
-    height: 365px;
-    width: 335px;
-    border-radius: 20px;
-    padding: 20px 35px;
-    text-align: center;
+  background-color: #000000;
+  height: 365px;
+  width: 335px;
+  border-radius: 20px;
+  padding: 20px 35px;
+  text-align: center;
 }
 
-
-
 .card h5 {
-    color: BLACK;
-    font-size: 24px;
+  color: BLACK;
+  font-size: 24px;
 }
 
 .card p {
-    color: #e2b9c6;
-    margin-top: 20px;
-    margin-bottom: 40px;
+  color: #e2b9c6;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .card a {
-    background-color: #a7cc15;
-    color: black;
-    padding: 10px 20px;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: 0.5s;
-    text-decoration: none;
+  background-color: #a7cc15;
+  color: black;
+  padding: 10px 20px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: 0.5s;
+  text-decoration: none;
 }
 
 .card a:hover {
-    background-color: red;
-    border: 2px solid #a7cc15;
+  background-color: red;
+  border: 2px solid #a7cc15;
 }
 
 .card-projetos {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 100px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 100px;
 }
 
 footer {
-    background-color: #000;
-    padding-top: 100px;
-    padding-bottom: 120px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  background-color: #000;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 footer h5 {
-    color: white;
-    font-size: 30px;
+  color: white;
+  font-size: 30px;
 }
 
 footer p {
-    color: white;
-    font-size: 18px;
-    margin-top: 14px;
-    margin-bottom: 30px;
+  color: white;
+  font-size: 18px;
+  margin-top: 14px;
+  margin-bottom: 30px;
 }
 
 .social {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .social img {
-    height: 24px;
-    border-radius: 50%;
+  height: 24px;
+  border-radius: 50%;
 }
 
 .social a {
-    background-color: #a7cc15;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
+  background-color: #a7cc15;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
 }
 
 .social a:hover {
-    transform: scale(1.3);
-    transition: 0.5s;
+  transform: scale(1.3);
+  transition: 0.5s;
 }
