--- a/styles.css
+++ b/styles.css
@@ -148,12 +148,12 @@ section div p {
   color: white;
   font-size: 24px;
   margin-top: 30px;
-  margin-left: -400px;
-  background-color: rgba(255, 0, 0, 0.5);
+  background-color:#000;
   cursor: pointer;
   border-radius: 12px;
-  margin-right: 600px;
   border: 3pxsolid #fc4b2a;
+  /* margin-right: 600px; */
+  /* margin-left: -400px; */
 }
 
 section div p:hover {
