--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 
 a.navbar-brand {
   color: #fff;
-  font-size:3em;
+  font-size:2em;
   /* font-weight:500; */
   display: flex;
   text-transform:uppercase;
@@ -131,17 +131,19 @@ h3 span {
 section img {
   padding-top:-15%;
   border-radius: 100%;
-  border: 2px solid red;
-  margin-left: -86%;
+  border: 2px solid #a7cc15;
   cursor: pointer;
+  /* margin-left: -86%; */
   /* margin-right: 0; */
   /* height: 400px; */
 }
 
 section div h2 {
-  font-size: 75px;
-  margin-left: -370px;
+  font-size: 3em;
   cursor: pointer;
+  color:#a7cc15 ;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 section div p {
@@ -151,7 +153,7 @@ section div p {
   background-color:#000;
   cursor: pointer;
   border-radius: 12px;
-  border: 3pxsolid #fc4b2a;
+  border: 3pxsolid #a7cc15;
   /* margin-right: 600px; */
   /* margin-left: -400px; */
 }
@@ -187,11 +189,15 @@ section div button:hover {
 }
 
 .projetos h2 {
-  color: orangered;
+  color: #fff;
   font-size: 75px;
   text-align: center;
   background-color: #191919;
 }
+
+.projetos span{
+  color:#a7cc15;
+} 
 
 .card {
   background-color: #000000;
@@ -280,4 +286,131 @@ footer p {
 .social a:hover {
   transform: scale(1.3);
   transition: 0.5s;
+}
+
+
+
+
+
+
+
+/* reset button */
+button {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  text-decoration: none;
+  text-transform: none;
+  line-height: normal;
+  overflow: visible;
+}
+
+body{
+  min-height: 100svh;
+  background-color: rgb(15, 23, 42);
+  color: white;
+  place-content: center;
+  font-size: 1rem;
+  font-family: system-ui;
+}
+
+nav {
+  --_clr-txt: rgb(255, 255, 255);
+  --_clr-txt-svg: rgb(147, 158, 184);
+  --_ani-speed: 6s; /* speed of rotating text */
+
+  display: flex;
+  /*flex-wrap: wrap;*/
+  gap: 1rem;
+  font-size: 1.4rem;
+}
+nav>button {
+  position: relative;
+  display: grid;
+  place-content: center;
+  grid-template-areas: 'stack';
+  padding: 0 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: aliceblue;
+}
+
+/* place button items on top of each other */
+nav>button>span {
+  transition: all 300ms ease-in-out;
+  grid-area: stack;
+}
+/* nav icon */
+nav>button>span:last-of-type {
+  margin-top: 0.25rem;
+  transform: scale(0);
+  transition-delay: 0ms;
+  border-radius: 50%;
+}
+/* hover - hide text */
+nav>button:focus-visible>span:first-of-type,
+nav>button:hover>span:first-of-type {
+  transform: scale(0);
+}
+/* hover - reveal icon */
+nav>button:focus-visible>span:last-of-type,
+nav>button:hover>span:last-of-type {
+  transform: scale(1);
+}
+
+/* nav SVG circular text*/
+nav>button>svg {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: center;
+  opacity: 0;
+  text-transform: uppercase;
+  transition: all 300ms ease-in-out;
+  color:#a7cc15;
+}
+/* hover - reveal rotating SVG */
+nav>button:focus-visible>svg,
+nav>button:hover>svg {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+  transition-delay: 150ms;
+  transition: all 300ms ease-in-out;
+}
+/*
+@supports (-webkit-touch-callout: none) {
+/* specific to iOS devices * / 
+button svg {
+    /* adjust position for iOS * /
+    translate: -50% -50%;
+    animation: rotate var(--_ani-speed) linear infinite;
+}
+}
+@supports not (-webkit-touch-callout: none) {
+*/
+
+
+button svg g {
+  transform-origin: center;
+  animation: rotate var(--_ani-speed) linear infinite;
+}
+
+
+@keyframes rotate {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
 }
