--- a/styles.css
+++ b/styles.css
@@ -116,15 +116,6 @@ h3 span {
 }
 
 
-/* section {
-  display: flex;
-  align-items: center;
-  padding:15% auto;
-  background-size: cover;
-  background-position: center;
-  background-color: #191919;
-  /* background-image: url(./img/background.png); */
-/* } */
 
 section img {
   border-radius: 100%;
@@ -137,7 +128,7 @@ section img {
   display: flex;
   align-items: center;
   position: relative;
-  top: -30px;
+  top: 5vh;
   max-width: 100%;
 }
 
@@ -146,6 +137,15 @@ section img:hover {
   transition: transform 0.5s ease-in-out;
   transform: scale(1.05);
 }
+
+
+
+.btn:hover {
+  border: 3px solid #ff5733;
+  transition: transform 0.5s ease-in-out;
+  transform: scale(1.05);
+}
+
 
 section div h2 {
   font-size: 3em;
