--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ section div button:hover {
 .projetos {
   background-color: #191919;
   padding-top: 50px;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
 }
 
 .projetos h2 {
@@ -406,17 +406,7 @@ nav > button:hover > svg {
   transition-delay: 150ms;
   transition: all 300ms ease-in-out;
 }
-/*
-@supports (-webkit-touch-callout: none) {
-/* specific to iOS devices * / 
-button svg {
-    /* adjust position for iOS * /
-    translate: -50% -50%;
-    animation: rotate var(--_ani-speed) linear infinite;
-}
-}
-@supports not (-webkit-touch-callout: none) {
-*/
+
 
 button svg g {
   transform-origin: center;
@@ -434,6 +424,59 @@ button svg g {
 
 /*PARTE RESPONSIVA MOBILE*/
 
+@media (max-width: 768px) {
+  nav > button {
+    position: relative;
+    padding: 0 1rem; /* Reduz a largura do padding para caber melhor na tela */
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 0.9rem; /* Diminui um pouco o tamanho da fonte */
+    color: aliceblue;
+  }
+
+  nav > button > svg {
+    width: 40px; /* Reduzi a largura para 40px para telas menores */
+    height: 80px; /* Ajustei a altura para 80px */
+    top: 50%;
+    left: 10%; /* Ajustei a posição para mais centralização */
+    transform: translate(
+      -50%,
+      -50%
+    ); /* Mudei o valor de -58% para -50% para centralizar melhor */
+    transform-origin: center;
+    opacity: 0;
+    text-transform: uppercase;
+    transition: all 300ms ease-in-out;
+    color: #a7cc15;
+  }
+
+  section img {
+    left: 15%;
+    width: 70%;
+    top: 0vh;
+  }
+
+  .container,
+  .container-md,
+  .container-sm {
+    max-width: 80% !important;
+  }
+
+  section div p {
+    font-size: 0.9em;
+  }
+
+  .caixa{
+    height: 60vh;
+    width: 100%;
+    
+  }
+
+  .projetos h2{
+    font-size: 2em;
+  }
+
+}
 @media (max-width: 430px) {
   nav > button {
     position: relative;
@@ -480,55 +523,3 @@ button svg g {
   }
 }
 
-@media (max-width: 768px) {
-  nav > button {
-    position: relative;
-    padding: 0 1rem; /* Reduz a largura do padding para caber melhor na tela */
-    text-transform: uppercase;
-    font-weight: 300;
-    font-size: 0.9rem; /* Diminui um pouco o tamanho da fonte */
-    color: aliceblue;
-  }
-
-  nav > button > svg {
-    width: 40px; /* Reduzi a largura para 40px para telas menores */
-    height: 80px; /* Ajustei a altura para 80px */
-    top: 50%;
-    left: 10%; /* Ajustei a posição para mais centralização */
-    transform: translate(
-      -50%,
-      -50%
-    ); /* Mudei o valor de -58% para -50% para centralizar melhor */
-    transform-origin: center;
-    opacity: 0;
-    text-transform: uppercase;
-    transition: all 300ms ease-in-out;
-    color: #a7cc15;
-  }
-
-  section img {
-    left: 15%;
-    width: 70%;
-  }
-
-  .container,
-  .container-md,
-  .container-sm {
-    max-width: 80% !important;
-  }
-
-  section div p {
-    font-size: 0.9em;
-  }
-
-  .caixa{
-    height: 60vh;
-    width: 100%;
-    
-  }
-
-  .projetos h2{
-    font-size: 2em;
-  }
-
-}
